jshell should also be started with --enable-preview